Example/5 - Deploy Kiali/app/frontend-deployment-http-v1.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: frontend
    namespace: app
spec:
    ports:
    - name: "http"
      port: 80 
      protocol: TCP 
      targetPort: 5000
    selector:
        app: frontend
---
apiVersion: apps/v1
kind: Deployment 
metadata:
   name: frontend-v1
   namespace: app
   labels:
      version: v1
spec:
   replicas: 3
   selector:
       matchLabels:
           app: frontend
           #serviceName: "frontend-svc"
   template:
       metadata:
           name: frontend
           labels:
               app: frontend
               version: v1
           namespace: app
       spec:
           containers:
                - image: jongablop/flask-frontend:latest
                  name: flask-frontend
                  volumeMounts:
                  - mountPath: /code
                    name: vol
                  ports:
                  - containerPort: 5000
                  livenessProbe:
                     httpGet:
                         port: 5050
                     #exec:
                     #   command:
                     #   - curl
                     #   - http://localhost:5050
                     initialDelaySeconds: 15
                     periodSeconds: 10
                - image: jongablop/flask-frontend-sidecar:latest
                  name: flask-frontend-sidecar
                  volumeMounts:
                  - mountPath: /code
                    name: test-vol
                  ports:
                  - containerPort: 5050
                  livenessProbe:
                     httpGet:
                         port: 5050
                     #exec:
                     #   command:
                     #   - curl
                     #   - http://localhost:5050
                     initialDelaySeconds: 15
                     periodSeconds: 10
           nodeSelector:                
               arch: amd
           volumes:
              - name: vol
                configMap:
                    name: flask-v1
                    items:
                       - key: app.py
                         path: app.py
              - name: test-vol
                configMap:
                    name: flask-test
                    items:
                       - key: test.py
                         path: test.py
           terminationGracePeriodSeconds: 0
