Example/5 - Deploy Kiali/app/frontend-deployment-http.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: frontend
    namespace: app
spec:
    ports:
    - name: "http"
      port: 80 #5000
      protocol: TCP
      targetPort: 5000
    #type: NodePort #LoadBalancer
    selector:
        app: frontend
