Example/5 - Deploy Kiali/app/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: frontend
    namespace: app
spec:
    ports:
    - name: http #tcp-frontend
      port: 5000
      protocol: TCP
      targetPort: 5000
    #type: NodePort #LoadBalancer
    selector:
        app: frontend
