Example/5 - Deploy Kiali/app/virtual-service-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
        name: app-virtualservice
        namespace: app
spec:
        hosts:
        - '*' #frontend-svc.app.svc.cluster.local
        gateways:
        - app/app-gateway
        http: 
        - route:
          - destination:
              host: frontend-svc.app.svc.cluster.local 
#              subset: v1
#            weight: 100
#          - destination:
#              host: frontend-svc.app.svc.cluster.local
#              subset: v2
#            weight: 0
